set up apllication routing

--- a/index.html
+++ b/index.html
@@ -39,87 +39,7 @@ width: 100%;
 background-image: linear-gradient(to left, #000cf9, #00e1ff);
 box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);">Jemba</header>
 <body>
-  <div style="position: fixed;">
-    <div 
-    style=
-    "width:400px; 
-    height: 467px;
-    position: relative;
-    background-color:whitesmoke;
-    border-radius: 20px;
-    top: 150px;
-    left: 150px;"
-    >
-      <div
-      style=
-      " background-image: linear-gradient(to left, #000cf9, #00e1ff);;
-      border-radius: 10px;
-      height: 50px;
-      text-align: center;
-      width: 400px;
-      font-size: x-large;
-      font-family: sans-serif;
-      color: white;
-      box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);"
-      >
-      Sign Up</div>
-      <div style ="
-      position: relative;
-      top: 18px;
-      width: 300px;
-      left: 50px;
-      ">
-      <header style=
-        "background-color: blue;
-        height: 30px;
-        border-radius: 10px;
-        color: white;
-        font-size: xx-large;
-        text-align: center;
-        padding: 10px 0;
-        width: 100%;
-        background-image: linear-gradient(to left, #000cf9, #00e1ff);
-        box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);">Already a Member ?</header>
-
-    </div>
-    <script type="module" src="buttonStudent.js"></script>
-  <div style="height: fit-content;"><button-Student></button-Student></div>
-    <div style="
-      width: 298px;
-      height: 300px;
-      border-style: solid;
-      border-color: lightgrey;
-      position: relative;
-      left: 50px;
-      top: 0px;
-      border-top-style: none;
-      border-bottom-left-radius: 10px;
-      border-bottom-right-radius: 10px;">
-      <p style="
-      margin: 0px;
-      position: relative;
-      top: 30px;
-      text-align: center;
-      font-size: x-large;"
-      >Login</p>
-      <input type="text" style="position: relative;
-      top: 80px;" class="inputText" placeholder="Email">
-      <input type="text" style="position: relative;
-      top: 90px;"class="inputText" placeholder="Password">
-    </div>
-      <button class="button" id="myButton" style=
-      "position: relative;
-      top: 22px;
-      left: 10px;"
-      >
-      I'm a Student</button>
-      <button class="button" style=
-      "position: relative;
-      top: 22px;
-      left: 134px;"
-      >
-      I'm an Employer</button>
-</div>
-</div>
+    <div id="outlet"></div>
+    <script type="module" src="router.js"></script>
 </body>
 </html>
