--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
         margin-right: 5px;
     }
   </style>
-    <title>Jembaa</title>
+    <title>Zlink</title>
 </head>
 <header style=
-"background-color: blue;
+"background-color: rgb(6, 28, 113);
 position: fixed;
 height: 50px;
 color: white;
@@ -36,8 +36,8 @@ font-size: xx-large;
 text-align: center;
 padding: 10px 0;
 width: 100%;
-background-image: linear-gradient(to left, #000cf9, #00e1ff);
-box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);">Jemba</header>
+font-family:Verdana, Geneva, Tahoma, sans-serif;
+box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);">ripe</header>
 <body>
     <div id="outlet"></div>
     <script type="module" src="router.js"></script>
