--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         margin-right: 5px;
     }
   </style>
-    <title>Zlink</title>
+    <title>Blinq</title>
 </head>
 <header style=
 "background-color: rgb(6, 28, 113);
@@ -37,7 +37,7 @@ text-align: center;
 padding: 10px 0;
 width: 100%;
 font-family:Verdana, Geneva, Tahoma, sans-serif;
-box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);">ripe</header>
+box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);">Blinq</header>
 <body>
     <div id="outlet"></div>
     <script type="module" src="router.js"></script>
