--- a/index.html
+++ b/index.html
@@ -27,17 +27,22 @@
   </style>
     <title>Blinq</title>
 </head>
-<header style=
-"background-color: rgb(6, 28, 113);
-position: fixed;
-height: 50px;
-color: white;
-font-size: xx-large;
-text-align: center;
-padding: 10px 0;
-width: 100%;
-font-family:Verdana, Geneva, Tahoma, sans-serif;
-box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);">Blinq</header>
+<header style="
+  background-color: rgb(6, 28, 113);
+  position: fixed;
+  height: 50px;
+  color: white;
+  font-size: xx-large;
+  text-align: center;
+  padding: 10px 0;
+  width: 100%;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+  left: 0; /* Set left edge to 0 */
+  right: 0; /* Set right edge to 0 */
+  top:0;
+">Blinq</header>
+
 <body>
     <div id="outlet"></div>
     <script type="module" src="router.js"></script>
