--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   right: 0; /* Set right edge to 0 */
   top:0;
 ">Blinq</header>
-
+<button >My Events</button>
 <body>
     <div id="outlet"></div>
     <script type="module" src="router.js"></script>
