working on navbar component

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </style>
     <title>Blinq</title>
 </head>
-<header style="
+<!-- <header style="
   background-color: rgb(6, 28, 113);
   position: fixed;
   height: 50px;
@@ -42,7 +42,7 @@
   right: 0; /* Set right edge to 0 */
   top:0;
 ">Blinq</header>
-<button >My Events</button>
+<button >My Events</button> -->
 <body>
     <div id="outlet"></div>
     <script type="module" src="router.js"></script>
