--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
+      .body{
+        background-color: rgba(243,242,240,255);
+      }
       .button {
           background-image: linear-gradient(to left, #000cf9, #00e1ff);
           color: #fff;
@@ -29,7 +32,7 @@
 </head>
 
 
-<body>
+<body class="body">
     <nav-bar></nav-bar>
     <div id="outlet"></div>
     <script type="module" src="router.js"></script>
