more front end stuff

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
+      @font-face {
+            font-family: 'Antic-Regular';
+            src: url('Assets/Antic-Regular.ttf') format('truetype');
+            /* You can also provide other font formats (e.g., woff, woff2) for better cross-browser support */
+        }
       .body{
         background-color: rgba(243,242,240,255);
         font-family: 'Roboto', sans-serif;
