overflow on page

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -13,6 +13,7 @@
       .body{
         background-color: rgba(243,242,240,255);
         font-family: 'Roboto', sans-serif;
+        overflow-x: hidden; 
       }
       .button {
           background-image: linear-gradient(to left, #000cf9, #00e1ff);
