added privacy policy and about us page

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -10,10 +10,10 @@
             src: url('Assets/Antic-Regular.ttf') format('truetype');
             /* You can also provide other font formats (e.g., woff, woff2) for better cross-browser support */
         }
-      .body{
-        background-color: rgba(243,242,240,255);
-        font-family: 'Roboto', sans-serif;
-      }
+        .body {
+          background-color: rgba(243, 242, 240, 1); /* Corrected the alpha value to be between 0 and 1 */
+          font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+        }
       .button {
           background-image: linear-gradient(to left, #000cf9, #00e1ff);
           color: #fff;
